# linearize

./: README.md
.github/workflows/: features.yml  msrv.yml
linearize/: Cargo.toml
linearize-derive/: Cargo.toml
linearize-derive/src/: lib.rs
linearize-tests/: Cargo.toml
linearize-tests/src/: tests.rs
linearize-tests/src/tests/: bytemuck.rs  core_addressing.rs  defmt.rs  derive.rs  postcard.rs  rand_0_10.rs  rand_0_8.rs  rand_0_9.rs  send_sync.rs
linearize/src/: copy_map.rs  foreign.rs  lib.rs  map.rs  storage.rs
linearize/src/foreign/: defmt_1.rs  postcard_1.rs  rand_0_10.rs  serde_1.rs
linearize/src/map/: iters.rs
